# mini-static-findings-scanner

./: .gitignore  FINDINGS.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  scanner.config.json  setup.ps1  setup.sh
benchmarks/: benchmark.py  requirements.txt
examples/: example-findings.html  example-findings.json  example-findings.md  example-findings.sarif
sample-project/: .env  README.md  backup.sql  package.json  requirements.txt
sample-project/src/: app.py  config.js  false_positives.py  insecure_examples.py  server.js
scanner/: __init__.py  cli.py  engine.py  entropy.py  languages.py  reporter.py  rules.py  sca.py  schema.py  validators.py
tests/: helpers.py  test_config.py  test_edge_cases.py  test_html.py  test_languages.py  test_output.py  test_parallel.py  test_rules.py  test_sarif.py  test_sca.py  test_security.py  test_validators.py
